--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -18,6 +18,7 @@
       <app-resource *ngFor="let resource of resources" [data]="resource" (drResponse)="drResponseHandler($event)"
         [isInCollectionPage]="isInCollectionPage">
       </app-resource>
+      <app-loading type="resource" *ngIf="isLoading"></app-loading>
     </div>
   </div>
 
