--- a/src/app/pages/write/write.component.scss
+++ b/src/app/pages/write/write.component.scss
@@ -1,17 +1,49 @@
-.section-container {
-    form {
-        mat-form-field {
-            width: 100%;
+.input-title {
+    margin: 15px 0 5px 0;
+    font-size: 40px;
+}
 
-            &:nth-of-type(1) {
-                input {
-                    font-size: 25px;
-                }
-            }
-        }
-    }
+.custom-image {
+    background-color: rgb(233, 231, 231);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 10px;
+    width: 100%;
+    height: 350px;
+    margin-bottom: 15px;
+    position: relative;
+    cursor: pointer;
 
-    editor {
-        margin-bottom: 15px;
+    p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
     }
+}
+
+.resource-image {
+    background-color: rgb(233, 231, 231);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 5px;
+    width: 100%;
+    height: 350px;
+    margin-bottom: 15px;
+    position: relative;
+
+    p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+}
+
+editor {
+    margin-bottom: 15px;
 }
