--- a/src/app/pages/write/write.component.html
+++ b/src/app/pages/write/write.component.html
@@ -63,9 +63,9 @@
           (click)="imageInput.click()"
           matRipple
           *ngIf="articleFormControls.isCustomImage.value"
-          [ngStyle]="{ 'background-image': 'url(' + image + ')' }"
+          [ngStyle]="{ 'background-image': 'url(' + customImage + ')' }"
         >
-          <p *ngIf="!image">
+          <p *ngIf="!customImage">
             <fa-icon [icon]="faUpload"></fa-icon>&nbsp;Click here to upload a
             custom image
           </p>
