--- a/src/app/pages/write/write.component.html
+++ b/src/app/pages/write/write.component.html
@@ -69,6 +69,9 @@
             <fa-icon [icon]="faUpload"></fa-icon>&nbsp;Click here to upload a
             custom image
           </p>
+          <div *ngIf="customImage" class="remove" (click)="removeImage('customImage')">
+            <fa-icon [icon]="faTrashAlt"></fa-icon>
+          </div>
           <input
             hidden
             (change)="onFileSelected(imageInput)"
@@ -82,7 +85,11 @@
           *ngIf="image && !articleFormControls.isCustomImage.value"
           class="resource-image"
           [ngStyle]="{ 'background-image': 'url(' + image + ')' }"
-        ></div>
+        >
+          <div class="remove" (click)="removeImage('image')">
+            <fa-icon [icon]="faTrashAlt"></fa-icon>
+          </div>
+        </div>
 
         <editor
           [apiKey]="apiKey"
