--- a/src/app/pages/write/write.component.scss
+++ b/src/app/pages/write/write.component.scss
@@ -22,6 +22,22 @@
         transform: translate(-50%, -50%);
         text-align: center;
     }
+
+    .remove {
+        cursor: pointer;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        background-color: #f44336;
+        border-radius: 50%;
+        width: 25px;
+        height: 25px;
+        color: white;
+        text-align: center;
+        line-height: 26px;
+        font-size: 12px;
+        box-shadow: 0 2px 16px rgba(0, 0, 0, 0.1);
+    }
 }
 
 .resource-image {
@@ -35,12 +51,19 @@
     margin-bottom: 15px;
     position: relative;
 
-    p {
+    .remove {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top: 15px;
+        right: 15px;
+        background-color: #f44336;
+        border-radius: 50%;
+        width: 25px;
+        height: 25px;
+        color: white;
         text-align: center;
+        line-height: 26px;
+        font-size: 12px;
+        box-shadow: 0 2px 16px rgba(0, 0, 0, 0.1);
     }
 }
 
