--- a/src/app/pages/write/write.component.html
+++ b/src/app/pages/write/write.component.html
@@ -2,12 +2,13 @@
   <div class="section">
     <div class="section-content">
       <form [formGroup]="articleForm">
-        <input
+        <textarea
+          autosize
           matInput
           placeholder="Title"
           formControlName="title"
           class="input-title"
-        />
+        ></textarea>
         <mat-error
           *ngIf="
             articleFormControls.title.hasError('required') &&
@@ -48,7 +49,7 @@
               articleFormControls.url.dirty
             "
           >
-            Please enter a valid link to an image
+            Please enter a link that ends with .jpg / .png or similar
           </mat-error>
         </mat-form-field>
 
@@ -69,7 +70,12 @@
             <fa-icon [icon]="faUpload"></fa-icon>&nbsp;Click here to upload a
             custom image
           </p>
-          <div *ngIf="customImage" class="remove" (click)="removeImage('customImage')">
+          <div
+            *ngIf="customImage"
+            class="remove"
+            (click)="removeImage('customImage')"
+            matRipple
+          >
             <fa-icon [icon]="faTrashAlt"></fa-icon>
           </div>
           <input
@@ -82,29 +88,36 @@
         </div>
 
         <div
-          *ngIf="image && !articleFormControls.isCustomImage.value"
+          *ngIf="
+            image &&
+            !articleFormControls.isCustomImage.value &&
+            articleFormControls.url.valid
+          "
           class="resource-image"
           [ngStyle]="{ 'background-image': 'url(' + image + ')' }"
         >
-          <div class="remove" (click)="removeImage('image')">
+          <div class="remove" (click)="removeImage('image')" matRipple>
             <fa-icon [icon]="faTrashAlt"></fa-icon>
           </div>
         </div>
 
-        <editor
-          [apiKey]="apiKey"
-          [init]="tinyMceInit"
-          [(ngModel)]="body"
-          formControlName="description"
-        ></editor>
-        <mat-error
-          *ngIf="
-            articleFormControls.description.hasError('required') &&
-            articleFormControls.description.dirty
-          "
-        >
-          Your article can't be empty!
-        </mat-error>
+        <div class="editor-container">
+          <editor
+            id="tinyeditor"
+            initialValue=""
+            [apiKey]="apiKey"
+            [init]="tinyMceInit"
+            formControlName="description"
+          ></editor>
+          <mat-error
+            *ngIf="
+              articleFormControls.description.hasError('required') &&
+              articleFormControls.description.dirty
+            "
+          >
+            Your article can't be empty!
+          </mat-error>
+        </div>
       </form>
 
       <div class="form-button-container">
