--- a/src/app/pages/write/write.component.html
+++ b/src/app/pages/write/write.component.html
@@ -25,12 +25,12 @@
             initialValue=""
             [apiKey]="apiKey"
             [init]="tinyMceInit"
-            formControlName="description"
+            formControlName="body"
           ></editor>
           <mat-error
             *ngIf="
-              articleFormControls.description.hasError('required') &&
-              articleFormControls.description.dirty
+              articleFormControls.body.hasError('required') &&
+              articleFormControls.body.dirty
             "
           >
             Your article can't be empty!
@@ -46,7 +46,7 @@
         <h4>Decorate your article</h4>
       </div>
       <div class="section-content">
-        <mat-form-field>
+        <mat-form-field appearance="outline">
           <mat-label>Add tags to your article</mat-label>
           <mat-chip-list #chipList aria-label="Interest selection">
             <mat-chip
@@ -68,13 +68,13 @@
           </mat-chip-list>
         </mat-form-field>
 
-        <mat-form-field *ngIf="!articleFormControls.isCustomImage.value">
+        <mat-form-field *ngIf="!articleFormControls.isCustomImage.value" appearance="outline">
           <mat-label>Give your article an image</mat-label>
-          <input matInput placeholder="URL" formControlName="url" />
+          <input matInput placeholder="Link to image" formControlName="imageLink" />
           <mat-error
             *ngIf="
-              articleFormControls.url.hasError('imageUrlInvalid') &&
-              articleFormControls.url.dirty
+              articleFormControls.imageLink.hasError('imageUrlInvalid') &&
+              articleFormControls.imageLink.dirty
             "
           >
             Please enter a link that ends with .jpg / .png or similar
@@ -119,7 +119,7 @@
           *ngIf="
             image &&
             !articleFormControls.isCustomImage.value &&
-            articleFormControls.url.valid
+            articleFormControls.imageLink.valid
           "
           class="resource-image"
           [ngStyle]="{ 'background-image': 'url(' + image + ')' }"
@@ -128,6 +128,19 @@
             <fa-icon [icon]="faTrashAlt"></fa-icon>
           </div>
         </div>
+
+        <h6>Add to collection</h6>
+        <mat-form-field appearance="outline">
+          <mat-label>Collections</mat-label>
+          <input type="text" placeholder="Select or Create New" matInput [matAutocomplete]="auto" formControlName="collectionTitle">
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-optgroup label="Existing Collections">
+              <mat-option *ngFor="let collection of collections" [value]="collection.title">
+                {{ collection.title }}
+              </mat-option>
+            </mat-optgroup>
+          </mat-autocomplete>
+        </mat-form-field>
 
         <div class="form-button-container">
           <app-custom-button
