--- a/src/app/pages/edit-article/edit-article.component.html
+++ b/src/app/pages/edit-article/edit-article.component.html
@@ -1,4 +1,9 @@
-<form [formGroup]="articleForm">
+<mat-progress-bar
+  *ngIf="isLoading"
+  mode="indeterminate"
+>
+</mat-progress-bar>
+<form [formGroup]="editArticleForm">
     <div class="section-container">
       <div class="section">
         <div class="section-content">
@@ -12,8 +17,8 @@
           ></textarea>
           <mat-error
             *ngIf="
-              articleFormControls.title.hasError('required') &&
-              articleFormControls.title.dirty
+              editArticleFormControls.title.hasError('required') &&
+              editArticleFormControls.title.dirty
             "
           >
             Please enter title
@@ -25,12 +30,12 @@
               initialValue=""
               [apiKey]="apiKey"
               [init]="tinyMceInit"
-              formControlName="body"
+              formControlName="description"
             ></editor>
             <mat-error
               *ngIf="
-                articleFormControls.body.hasError('required') &&
-                articleFormControls.body.dirty
+                editArticleFormControls.description.hasError('required') &&
+                editArticleFormControls.description.dirty
               "
             >
               Your article can't be empty!
@@ -68,13 +73,13 @@
             </mat-chip-list>
           </mat-form-field>
   
-          <mat-form-field *ngIf="!articleFormControls.isCustomImage.value" appearance="outline">
+          <mat-form-field *ngIf="!editArticleFormControls.isCustomImage.value" appearance="outline">
             <mat-label>Give your article an image</mat-label>
-            <input matInput placeholder="Link to image" formControlName="imageLink" />
+            <input matInput placeholder="Link to image" formControlName="image" />
             <mat-error
               *ngIf="
-                articleFormControls.imageLink.hasError('imageUrlInvalid') &&
-                articleFormControls.imageLink.dirty
+                editArticleFormControls.image.hasError('imageUrlInvalid') &&
+                editArticleFormControls.image.dirty
               "
             >
               Please enter a link that ends with .jpg / .png or similar
@@ -91,7 +96,7 @@
             class="custom-image"
             (click)="imageInput.click()"
             matRipple
-            *ngIf="articleFormControls.isCustomImage.value"
+            *ngIf="editArticleFormControls.isCustomImage.value"
             [ngStyle]="{ 'background-image': 'url(' + customImage + ')' }"
           >
             <p *ngIf="!customImage">
@@ -118,8 +123,8 @@
           <div
             *ngIf="
               image &&
-              !articleFormControls.isCustomImage.value &&
-              articleFormControls.imageLink.valid
+              !editArticleFormControls.isCustomImage.value &&
+              editArticleFormControls.image.valid
             "
             class="resource-image"
             [ngStyle]="{ 'background-image': 'url(' + image + ')' }"
@@ -132,7 +137,7 @@
           <h6>Add to collection</h6>
           <mat-form-field appearance="outline">
             <mat-label>Collections</mat-label>
-            <input type="text" placeholder="Select or Create New" matInput [matAutocomplete]="auto" formControlName="collectionTitle">
+            <input type="text" placeholder="Select or Create New" matInput [matAutocomplete]="auto" formControlName="collectionName">
             <mat-autocomplete #auto="matAutocomplete">
               <mat-optgroup label="Existing Collections">
                 <mat-option *ngFor="let collection of collections" [value]="collection.title">
@@ -145,7 +150,9 @@
           <div class="form-button-container">
             <app-custom-button
               [buttonLabel]="saveButtonText"
-              (click)="submitArticle()"
+              [isDisabled]="isDisabled"
+              [isLoading]="isLoading"
+              (click)="submitEditArticleForm()"
               size="small"
             ></app-custom-button>
           </div>
