fixed adding comment

--- a/src/app/general/resource/resource.component.html
+++ b/src/app/general/resource/resource.component.html
@@ -1,11 +1,22 @@
 <div class="resource" *ngIf="!isLoading">
-  <img class="image" [src]="image" (click)="goToView()">
+  <img *ngIf="image" class="image" [src]="image" (click)="goToView()" />
   <div class="details">
-    <h4>{{ title }}</h4>
-    <p *ngIf="type === 'ext-content'">{{ description | truncate:[40] }}</p>
-    <div *ngIf="type === 'article'" [innerHtml]="description | truncate:[175]"></div>
+    <h4 [ngStyle]="{ 'padding-top': image ? '' : '15px' }">{{ title }}</h4>
+    <!-- * Type -->
+    <div class="type" *ngIf="type === 'article'">
+      {{ type }}
+    </div>
+    <p *ngIf="type === 'ext-content'">{{ description | truncate: [40] }}</p>
+    <div
+      *ngIf="type === 'article'"
+      [innerHtml]="description | truncate: [500]"
+    ></div>
     <div class="actions">
-      <button (click)="goToEdit()" mat-button *ngIf="loggedInUser === resourceUser">
+      <button
+        (click)="goToEdit()"
+        mat-button
+        *ngIf="loggedInUser === resourceUser"
+      >
         <fa-icon [icon]="faEdit"></fa-icon>
       </button>
 
@@ -15,11 +26,21 @@
         </button>
       </a>
 
-      <button *ngIf="!isInCollectionPage && resourceUser === loggedInUser" mat-button color="warn" (click)="openDrDialog()">
+      <button
+        *ngIf="!isInCollectionPage && resourceUser === loggedInUser"
+        mat-button
+        color="warn"
+        (click)="openDrDialog()"
+      >
         <fa-icon [icon]="faTrashAlt"></fa-icon>
       </button>
 
-      <button *ngIf="isInCollectionPage && routeUser === loggedInUser" mat-button color="warn" (click)="deleteResourceFromCollection()">
+      <button
+        *ngIf="isInCollectionPage && routeUser === loggedInUser"
+        mat-button
+        color="warn"
+        (click)="deleteResourceFromCollection()"
+      >
         <fa-icon [icon]="faFolderMinus"></fa-icon>
       </button>
     </div>
