--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -18,3 +18,19 @@ app-root {
     display: block;
     height: 100vh;
 }
+
+.type {
+	color: white;
+	font-size: 12px;
+	padding: 5px 5px 4px 5px;
+	background: rgb(244,67,54);
+	background: linear-gradient(to right,#ff8a00,#e52e71);
+	border-radius: 5px;
+	-webkit-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.26);
+	-moz-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.26);
+	box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.26);
+	text-align: center;
+	width: 50px;
+	margin-left: 15px;
+	margin-bottom: 15px;
+}
