--- a/src/app/general/resource/resource.component.scss
+++ b/src/app/general/resource/resource.component.scss
@@ -17,7 +17,9 @@
 		border-top-left-radius: 5px;
 		border-top-right-radius: 5px;
 		width: 275px;
+		height: 150px;
 		max-width: 300px;
+		max-height: 300px;
 		object-fit: cover;
 
 		&::before {
