--- a/src/app/pages/profile/edit-profile/edit-profile.component.scss
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.scss
@@ -86,6 +86,11 @@
             .bio {
                 line-height: 25px;
             }
+
+            .followers-following {
+                padding: 20px 0 5px 0;
+                font-size: 14px;
+            }
         }
 
         mat-progress-bar {
