--- a/src/assets/styles/resource-grid.scss
+++ b/src/assets/styles/resource-grid.scss
@@ -6,6 +6,14 @@
   justify-items: center;
 }
 
+.see-more {
+  cursor: pointer;
+  text-align: center;
+  font-size: 12px;
+  font-weight: bold;
+  margin: 15px;
+}
+
 
 @media (min-width: 768px) {
   .resource-grid {
