--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="see-more" (click)="loadMorePosts()">
+  <div class="see-more" *ngIf="!isLoading && resources.length < resourcesCount" (click)="loadMorePosts()">
     See More
   </div>
 
