--- a/src/app/pages/profile/public-profile/public-profile.component.html
+++ b/src/app/pages/profile/public-profile/public-profile.component.html
@@ -95,7 +95,7 @@
         </app-resource>
       </div>
 
-      <div *ngIf="!isLoading" class="see-more" (click)="loadMorePosts()">
+      <div *ngIf="!isLoading && resources.length < resourcesCount" class="see-more" (click)="loadMorePosts()">
         See More
       </div>
 
