--- a/src/app/general/dialogs/atc/atc.component.html
+++ b/src/app/general/dialogs/atc/atc.component.html
@@ -3,21 +3,39 @@
 </p>
 <form [formGroup]="addToCollectionForm">
   <div mat-dialog-content>
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
       <mat-label>Add to Collection</mat-label>
-      <input type="text" placeholder="Select or Create New" matInput [matAutocomplete]="auto"
-        formControlName="collectionName">
+      <input
+        type="text"
+        placeholder="Select or Create New"
+        matInput
+        [matAutocomplete]="auto"
+        formControlName="collectionName"
+      />
       <mat-autocomplete #auto="matAutocomplete">
         <mat-optgroup label="Move to Existing Collections">
-          <mat-option *ngFor="let name of collectionNames" [value]="name">
-            {{name}}
+          <mat-option
+            *ngFor="let collection of collections"
+            [value]="collection.title"
+          >
+            {{ collection.title }}
           </mat-option>
         </mat-optgroup>
       </mat-autocomplete>
-    </mat-form-field>
+    </mat-form-field> -->
+    <div class="existing-collections" *ngIf="collections.length > 0">
+      <div class="collection" *ngFor="let collection of collections" matRipple>
+        <div class="image" [ngStyle]="{ 'background-image': 'url(' + collection.image  +')' }">
+        </div>
+
+        <span>{{ collection.title }}</span>
+      </div>
+    </div>
   </div>
   <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button (click)="submitAddToCollectionForm()" cdkFocusInitial>Ok</button>
+    <button mat-button (click)="submitAddToCollectionForm()" cdkFocusInitial>
+      Ok
+    </button>
   </div>
 </form>
