--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -1,42 +1,84 @@
 .dialog-title {
-    font-size: 16px;
-    max-width: 400px;
-    strong {
-        font-family: 'Montserrat', sans-serif;
-    }
+  font-size: 16px;
+  max-width: 400px;
+  margin-bottom: 15px;
+  strong {
+    font-family: "Montserrat", sans-serif;
+  }
+}
+
+h6 {
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 mat-form-field {
-    width: 100% !important;
+  width: 100% !important;
 }
 
-.existing-collections {
+.parent {
+  height: 100%;
+  overflow: hidden;
+
+  .existing-collections {
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    height: 225px;
     max-height: 500px;
-    overflow-y: auto;
-    .collection {
-        border-radius: 5px;
-        cursor: pointer;
-        display: grid;
-        grid-template-columns: 50px 1fr;
-        grid-column-gap: 15px;
-        margin-bottom: 5px;
-        padding: 5px;
-        transition: background-color 0.2s ease-in-out;
+    overflow-y: scroll;
+    margin-bottom: 15px;
 
-        &:hover {
-            background-color: rgba(0, 0, 0, .1);
-        }
+    // width
+    &::-webkit-scrollbar {
+      width: 5px;
 
-        .image {
-            width: 50px;
-            height: 50px;
-            border-radius: 5px;
-            background-size: cover;
-            background-position: center center;
-        }
-
-        span {
-            align-self: center;
-        }
+      &:hover {
+          width: 10px;
+      }
     }
+
+    // Handle
+    &::-webkit-scrollbar-thumb {
+      border-radius: 5px;  
+      background: #FC800C;
+
+      &:hover {
+        background: rgb(175, 87, 5);
+      }
+    }
+
+    .collection {
+      border-radius: 5px;
+      cursor: pointer;
+      display: grid;
+      grid-template-columns: 50px 1fr;
+      grid-column-gap: 15px;
+      padding: 5px;
+      transition: background-color 0.2s ease-in-out;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+
+      .image {
+        width: 50px;
+        height: 50px;
+        border-radius: 5px;
+        background-size: cover;
+        background-position: center center;
+      }
+
+      span {
+        align-self: center;
+      }
+    }
+
+    .loading {
+        display: grid;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        height: 100px;
+    }
+  }
 }
