--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -68,8 +68,22 @@ mat-form-field {
         background-position: center center;
       }
 
-      span {
+      p {
         align-self: center;
+        margin: 0;
+
+        .in-this-collection {
+            background: #FDC830;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #F37335, #FDC830);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #F37335, #FDC830); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            border-radius: 3px;
+            color: white;
+            padding: 3px 0 1px 6px;
+            display: block;
+            font-size: 12px;
+            font-family: 'Hind', sans-serif;
+            width: 90px;
+        }
       }
     }
 
