--- a/src/app/general/dialogs/atc/atc.component.html
+++ b/src/app/general/dialogs/atc/atc.component.html
@@ -33,7 +33,7 @@
       (scrolled)="onScrollDown()"
       [scrollWindow]="false"
     >
-      <div class="collection" *ngFor="let collection of collections" matRipple>
+      <div class="collection" *ngFor="let collection of collections" (click)="addResourceToCollection(collection.id)" matRipple>
         <div
           class="image"
           [ngStyle]="{ 'background-image': 'url(' + collection.image + ')' }"
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <form [formGroup]="addToCollectionForm">
+  <form [formGroup]="createCollectionForm">
     <mat-form-field appearance="outline">
       <mat-label>Create new Collection</mat-label>
       <input
@@ -62,7 +62,7 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button (click)="submitAddToCollectionForm()" cdkFocusInitial>
+  <button mat-button (click)="submitCreateCollectionForm()" cdkFocusInitial>
     Ok
   </button>
 </div>
