--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -22,11 +22,15 @@ mat-form-field {
 
   .existing-collections {
     border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
     height: 225px;
     max-height: 500px;
-    overflow-y: scroll;
     margin-bottom: 15px;
+    overflow: hidden;
+    transition: max-height 0.15s ease-in-out;
+
+    &:hover {
+      overflow-y: scroll;
+    }
 
     // width
     &::-webkit-scrollbar {
