--- a/src/app/general/snackbar/snackbar.component.html
+++ b/src/app/general/snackbar/snackbar.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="!data.error">
-  <span class="snackbar">
+<div *ngIf="data.error">
+  <span class="snackbar red-snackbar">
     <fa-icon [icon]="faCheckCircle"></fa-icon>{{ data.message }}
   </span>
 </div>
 
-<div *ngIf="data.error">
+<div *ngIf="!data.error">
   <span class="snackbar">
     <fa-icon [icon]="faTimesCircle"></fa-icon>{{ data.message }}
   </span>
