fixed missing collection with 0 resource

--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -68,6 +68,9 @@ mat-form-field {
         width: 50px;
         height: 50px;
         border-radius: 5px;
+        background: #EFEFBB;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #D4D3DD, #EFEFBB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         background-size: cover;
         background-position: center center;
       }
