--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -66,6 +66,8 @@
           </mat-chip-list>
         </mat-form-field>
 
+        <app-add-to-collection></app-add-to-collection>
+
         <div class="form-button-container clearfix">
           <app-custom-button [buttonLabel]="submitButtonText" [isDisabled]="isDisabled" [isLoading]="isLoading" size="small"></app-custom-button>
         </div>
