--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -66,7 +66,7 @@
           </mat-chip-list>
         </mat-form-field>
 
-        <app-add-to-collection></app-add-to-collection>
+        <app-add-to-collection (message)="receiveAtcData($event)"></app-add-to-collection>
 
         <div class="form-button-container clearfix">
           <app-custom-button [buttonLabel]="submitButtonText" [isDisabled]="isDisabled" [isLoading]="isLoading" size="small"></app-custom-button>
