updated add to collection component

--- a/src/app/components/add-to-collection/add-to-collection.component.html
+++ b/src/app/components/add-to-collection/add-to-collection.component.html
@@ -3,7 +3,7 @@
     <div *ngIf="collections">
         <mat-form-field appearance="outline">
           <mat-label>Existing collections</mat-label>
-          <mat-select formControlName="collectionId">
+          <mat-select formControlName="collectionId" #collectionSelect>
             <mat-option
               *ngFor="let collection of collections"
               [value]="collection.id"
